[package]
name = "api-vida-submarina"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }
futures-util = "0.3"
